cabal-version:      2.4
name:               yahp
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Yet another Haskell prelude

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: Apache-2.0

author: Johannes Gerer
copyright: 2022-2023 Johannes Gerer

library

    exposed-modules:
        Yahp
        Yahp.FinancialUnits
        Yahp.NonNegative
        Yahp.Jq
        Yahp.Zippable

    default-extensions:
      DataKinds
      UndecidableInstances
      ViewPatterns
      OverloadedStrings
  
    build-depends:    aeson
                    , async >= 2.1.1
                    , base
                    , bytestring
                    , containers
                    , data-default
                    , directory
                    , dlist
                    , interpolatedstring-perl6
                    , lens
                    , mtl
                    , primitive
                    , process-extras
                    , protolude
                    , relude
                    , sop-core
                    , template-haskell
                    , temporary
                    , text
                    , text-show
                    , these
                    , vector
                    -- , text
                    -- , time
                    

    hs-source-dirs:   src
    default-language: GHC2021


    ghc-options:
     -Werror=partial-fields
     -Werror=incomplete-record-updates
     -Werror=incomplete-uni-patterns
     -Werror=incomplete-patterns
     -Werror=unused-top-binds -Werror=unused-local-binds -Werror=unused-pattern-binds
     -Werror=unused-matches
     -Werror=overflowed-literals
     -Werror=overlapping-patterns
     -Werror=missing-fields
     -Werror=typed-holes
     -Werror=empty-enumerations
     -Werror=unrecognised-pragmas
     -Werror=missing-methods
     -Wall

-- Local Variables:
-- compile-command: "nix-shell --run 'cabal exec -- ghc-pkg list'"
-- End:
